# BlasBooster

./: .clang-format  .cproject  .gitignore  .gitlab-ci.yml  .project  CMakeLists.txt  Jenkinsfile  README.md  build.sh  conanfile.txt
.devcontainer/: Dockerfile
ArgumentParser/: .cproject  .project  CMakeLists.txt  README.md
ArgumentParser/include/BrainTwister/: ArgumentParser.h  Value.h
ArgumentParser/src/: ArgumentParser.cpp  CMakeLists.txt
ArgumentParser/test/: ArgumentParser.cpp  Design.cpp
BenchmarkManager/: .cproject  .project
BenchmarkManager/include/BrainTwister/: BenchmarkManager.h
BenchmarkManager/test/: CMakeLists.txt
benchmark/: benchmark.json  benchmark_serie.json  benchmark_serie_2.json  test_matrix_1.xml  test_matrix_2.xml
benchmark/PF_dna16/: F_dna16.xml  P_dna16.xml  benchmark.json  benchmark_FF.json  benchmark_PF.json  benchmark_PP.json  pattern.xpm
benchmark/find_omega/: benchmark.json
cmake/: FindCppSettings.cmake  FindMKL.cmake  FindMTL4.cmake  FindOpenBLAS.cmake  FindRecord.cmake
devel/: .env  clean_code.sh  docker-compose.yml
docs/src/: blasanalyzer.rst  matrix_operations.rst  matrix_types.rst
doxygen/: .gitignore  Doxyfile  Doxyfile.in  main.doxy
eclipse/: AllTests release clang.launch  Benchmark debug gnu.launch  Benchmark release gnu.launch  CoreTest release clang.launch  CoreTest release gnu.launch  UtilitiesTest debug gnu.launch  UtilitiesTest release gnu.launch  cmake debug clang.launch  cmake debug gnu.launch  cmake release clang.launch  cmake release gnu 4.9.launch  cmake release gnu 5.launch  cmake release gnu openblas.launch  cmake release gnu.launch  make test release gnu.launch
ideal_tests/: A.xml  B.xml  benchmark.json
include/BlasBooster/: BlasBooster.h  Matrix.h
include/BlasBooster/BlasInterface/: Blas.h  Blas.h.pre  BlasBoosterMacroBlasFunctionList.h  BlasBoosterMacroBlasFunctionListNumbered.h  BlasBoosterMacroCreateBlasArgumentList.h  BlasBoosterMacroCreateBlasArgumentListWithNames.h  BlasBoosterMacroCreateBlasFunctionDeclaration.h  BlasBoosterMacroCreateBlasFunctionDeclarationForInterface.h  BlasBoosterMacroCreateBlasFunctionDeclarationWithUnderscore.h  BlasBoosterMacroCreateBlasFunctionDefinitionForAnalyzer.h  BlasBoosterMacroCreateBlasFunctionDefinitionForInterface.h  BlasBoosterMacroCreateBlasFunctionType.h  BlasBoosterMacroCreateBlasVariableList.h  BlasBoosterMacroCreateSingleBlasFunction.h  BlasBoosterMacroCreateSingleBlasFunctionDeclarationForInterface.h  BlasBoosterMacroCreateSingleBlasFunctionDefinitionForAnalyzer.h  BlasFunctionList.yml  (+17 more)
include/BrainTwister/: ArgumentParser.h  ArgumentParserException.h  BenchmarkManager.h  Value.h  ValueChecker.h
jupyter/: .env  README.md  docker-compose.yml  dockerfile-gpu-devel
jupyter/notebooks/: matrix_mult.ipynb
matrices/: .F_dna16.xml.swp  F_dna16_sub.xml  matrix.xml
python/: benchmark.py  generate_all.sh  jinja_code_generator.py
settings/: BenchmarkSettings.xml  BlasAnalyzerSettings.xml  PatternSettings.xml  ThresholdSettings.xml  benchmark.json  benchmark_accurate.json  input.json  input.xml  input.yml  pattern.json  pattern_accurate.json
src/: ArgumentParser.cpp
src/Benchmark/: ActionBase.h  ActionOpenBlasDgemm.h  ActionProvider.cpp  ActionProvider.h  ActionSettingsBase.h  Action_blasbooster_block.h  Action_blaze_dgemm.h  Action_blaze_dsgemm.h  Action_blaze_sdgemm.h  Action_blaze_sgemm.h  Action_eigen_dgemm.h  Action_eigen_sgemm.h  Action_intelmkl_dgemm.h  Action_intelmkl_sgemm.h  Action_native_dense.h  Action_openblas_dgemm.h  Action_openblas_sgemm.h  CMakeLists.txt  MatrixMatrixAddition.h  MatrixMatrixMultiplication.h  MatrixProvider.cpp  MatrixProvider.h  PolymorphicAction.h  ReporterBase.h  ReporterManager.h  StandardReporter.h  benchmark.cpp  generate_matrix.cpp  main.cpp  matrix_matrix_mult.cpp  matrix_matrix_mult.h  show_pattern.cpp  time.cpp  time.h
src/BlasAnalyzer/: BlasAnalyzer.cpp  Reporter.cpp  Reporter.h
src/CoreLib/: AbsoluteValueRangeChecker.h  BlockSizeGenerator.cpp  BlockSizeGenerator.h  BlockedMatrix.h  CMakeLists.txt  Copy.h  CoreException.h  Cursor.h  CursorBase.h  DenseMatrix.h  Direction.h  DynamicMatrixFunctions.h  GenerateTypeMatrix.cpp  GenerateTypeMatrix.h  MatrixBase.h  MatrixConverter.h  MultipleMatrix.h  Multiplication.h  MultiplicationDetails.h  Norm.h  NormPolicy.h  OccupationPolicy.h  Parameter.h  PatternGenerator.h  SparseMatrix.h  SparseStorage.h  StripedIterator.h  TypeList.h  ZeroMatrix.h
src/CoreTest/: AbsoluteValueRangeCheckerTest.cpp  CMakeLists.txt  MatrixConverterTest.cpp  MatrixMultiplicationTest.cpp  MultipleMatrixTest.cpp  SparseMatrixTest.cpp  StorageTest.cpp  ThresholdTest.cpp
src/Interfaces/: code-generator.py
src/Interfaces/IntelMKL/: BlasInterface_IntelMKL.cpp  BlasInterface_IntelMKL.cpp.pre  CMakeLists.txt
src/Interfaces/OpenBLAS/: BlasInterface_OpenBLAS.cpp  BlasInterface_OpenBLAS.cpp.pre  CMakeLists.txt
src/MatrixFactory/: CMakeLists.txt  MatrixFileImporter.cpp  MatrixGenerator.cpp
src/PythonBinding/: CMakeLists.txt  matrix.cpp
src/Tools/: CMakeLists.txt  Coeff2Dens.cpp  ShowPattern.cpp
src/Utilities/: CMakeLists.txt  tracker.cpp
test/: ArgumentParser.cpp  BenchmarkManager.cpp  CMakeLists.txt  Design.cpp
test/Core/: AbsoluteValueRangeChecker.cpp  AbsoluteValueRangeCheckerTest.cpp  BinaryFunctors.cpp  BlockSizeGenerator.cpp  BlockedMatrixMultiplication.cpp  CMakeLists.txt  MatrixConverter.cpp  MatrixConverterTest.cpp  MatrixMultiplication.cpp  MatrixMultiplicationTest.cpp  MatrixMultiplicationTyped.cpp  MatrixNorm.cpp  MatrixNorm2.cpp  MultipleMatrix.cpp  MultipleMatrixTest.cpp  SparseMatrix.cpp  SparseMatrixTest.cpp  Storage.cpp  StorageTest.cpp  Threshold.cpp  ThresholdTest.cpp  Transposition.cpp  ZeroMatrix.cpp
test/CoreLib/: AbsoluteValueRangeCheckerTest.cpp  CMakeLists.txt  StorageTest.cpp
test/Design/: BoostPropertyTree.cpp  CMakeLists.txt  DynamicType.cpp  range-v3.cpp  unpackTwoVariadicTemplates.cpp
test/Utilities/: CMakeLists.txt  Serialize.cpp  Settings.cpp  Settings1.cpp  Settings2.cpp  Settings3.cpp  Settings4.cpp  Settings5.cpp  TypeList.cpp
(+87 files in other folders)
